# ultima-vi-online

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.docker-desktop  Dockerfile.linux  README.md  Xenkan.cpp  buildlog.txt  client_bmp.inc  crash.dmp  crash.txt  data_both.cpp  data_both.h  data_client.cpp  data_client.h  data_host.cpp  data_host.h  define_both.h  define_host.h  docker-build-tag-push.sh  docker-compose.yml  docker-entrypoint.ps1  frame.cpp  frame.h  function_both.cpp  function_both.h  function_client.cpp  function_client.h  function_host.cpp  function_host.h  generate_state_headers.js  generate_state_headers.py  globals.inc  host.inc  host_setup.cpp  host_setup.h  (+23 more)
.github/: copilot-instructions.md
.github/agents/: cpp-modernizer.agent.md  crash-report.agent.md
.github/prompts/: plan-serverRefactor.prompt.md
.run/: both.run.xml  client.run.xml  generate_icons.run.xml  host.run.xml
VC-files/: .output.txt  CMakeLists.txt  Ultima VI Online.sln  log.txt  u6o7.sln  u6o7.vcxproj  u6oclient.vcxproj  u6oh.vcxproj
VC-files/CMake/: Default.cmake
VC-files/Debug/Client/: client.exe.recipe  u6oclient.vcxproj.FileListAbsolute.txt  vc143.idb
VC-files/Debug/Client/client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
VC-files/Debug/Host/: host.exe.recipe  u6oh.vcxproj.FileListAbsolute.txt  vc143.idb
VC-files/Debug/Host/host.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  host.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
VC-files/ReleaseInter/u6o7/u6o7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  u6o7.lastbuildstate
VC-files/ReleaseInter/u6oclient2/u6oclient2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
VC-files/ReleaseInter/u6oh/u6oh.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
assets/game_files/host/: log.txt  motd.txt
assets/images/: README.md
assets/map_patches/: guardianguild.txt  safeSpot.txt  shop.txt
client/: input.cpp  input.h
docs/: ExternInventory.md  MEMORY_LEAK_INVESTIGATION_SUMMARY.md  MEMORY_LEAK_QUICK_REFERENCE.md  TripleCrossbowCrash.md  plan-resizableWindow.md  plan-serverRefactor.md  refactor_fixes_plan.md  resizable-window-hotspots.md
docs/admin/: README.md
docs/gameplay/: combat.md  karma.md
docs/housing/: guardian-guild.md
docs/map_rendering/: README.md
docs/modernization/: MM-P9.5-cached-text-dc.md  MPRES-P1-presenter.md
docs/plans/: plan-clientMapDownload.md  plan-dynamicObjectBuffer.md  plan-linuxHost.md  plan-loopClientSplit.md  plan-loopHostSplit.md  plan-memoryManagement.md  plan-resizableWindow.md  plan-serverRefactor.md
docs/plans/done/: plan-clientMapDownload.md  plan-loopClientSplit.md
docs/plans/in-progress/: .gitkeep  ANALYSIS_SESSION_6_25_2026.md  MM_BASELINE_TEST_PROCEDURE.md  MM_P9_GAME_LOOP_LEAKS.md  Ultima6Online_MemoryLeak_Audit_1.md  plan-memoryManagement.md  plan-modernPresenter.md
docs/plans/modernization/: README.md  plan-modernize-client.md  plan-modernize-common.md  plan-modernize-server.md
docs/plans/todo/: plan-dynamicObjectBuffer.md  plan-modernPresenter.md
docs/rendering/: global-room-sync.md
docs/rendering/basements/: README.md  basement-camera-follow-root-cause.md
docs/rendering/map-client-host-sync/: README.md
docs/ui/: README.md
entity/: moveable.cpp  moveable.h  object.cpp  object.h
include/: dmplugin.h
k8s/: README-k8s.md  deployment.yaml
k8s/aks/: README.md  deployment.yaml  pvc.yaml
k8s/docker-desktop/: README.md  deployment.yaml  docker-compose.yml  hostpath-probe.yaml
map_patches/: guardianguild.txt
spell_code/: spell_code.cpp  spell_code.h
src/client/: Resource.h  client_bmp.inc  data_client.cpp  data_client.h  define_client.h  dmusic.cpp  dmusic.h  frame.cpp  frame.h  function_client.cpp  function_client.h  loop_client.cpp  loop_client.inc  myddraw.cpp  myddraw.h  new_getspr.inc  old_getspr.inc  present.cpp  present.h  setup_client.inc  sound.cpp  sound.h  splash.cpp  splash.h  ui_layout.cpp  ui_layout.h  ui_panels_apply.cpp  viewport.cpp  viewport.h
src/common/: Xenkan.cpp  data_both.cpp  data_both.h  define_both.h  function_both.cpp  function_both.h  globals.inc  house.cpp  myfile.cpp  myfile.h  mytxt.h  secret_a.inc  secret_b.inc  setup_both.inc  setup_both_basic.h  setup_both_basic.inc  stdafx.cpp  stdafx.h  txt.cpp  u6o7.cpp  u6o7.h  u6o7.rc.in
src/server/: MemoryHelpers.h  ShrineEffects.h  data_host.cpp  data_host.h  data_shims_host.h  data_structs_host.h  define_host.h  function_host.cpp  function_host.h  host.inc  host_setup.h  host_setup.inc  loop_host.cpp  loop_host.inc  setup_host.inc
test/client/: crash.dmp  crash.txt
tools/: Enter-DevBuildEnv.ps1  README.md  analyze_dump.ps1  build_icon.ps1  combat_stats_dump.py  karma_npc_scan.py  loop_split_banner.ps1  loop_split_commentcheck.ps1  loop_split_extract.ps1  loop_split_host_both_oracle_baseline.sha256  loop_split_host_oracle_baseline.sha256  loop_split_oracle.ps1  loop_split_oracle_baseline.sha256  loop_split_oracle_host.ps1  loop_split_scan.ps1  loop_split_scan_host.ps1  symbolize.cpp
tools/crash/: crash.dmp  crash.txt
tools/save_editor/: Ultima_6_Character_Editor.chm  vcl200.bpl  vclZipForged20.bpi  vclZipForged20.bpl  vcldb200.bpl  vcldbx200.bpl  vclie200.bpl  vclimg200.bpl  vclshlctrls200.bpl  vclsmp200.bpl  vclx200.bpl
u6o-host/: data_host.h  host_fixes.cpp  host_fixes.h  host_object_init.cpp  host_object_init.h  host_setup.cpp  host_setup.h
use_code/: use_code.cpp
window/: window_code.cpp  window_code.h
(+193 files in other folders)
